# GhostRider

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  ghostrider.db  ghostwriter.db  pyproject.toml  test_discord.py  test_discord_with_callback.py
.github/workflows/: ci.yml
src/ghostrider/: config.py  core.py  main.py  models.py  processor.py
src/ghostwriter/: config.py  core.py  main.py  models.py  processor.py  py.typed
src/ghostwriter/database/: __init__.py  manager.py  models.py
tests/: test_integration.py  test_main.py  test_message_processor.py  test_simple.py  test_sms_integration.py
